--- a/_posts/2019-02-21-format使用.md
+++ b/_posts/2019-02-21-format使用.md
@@ -24,75 +24,35 @@ title: format使用方式
 sdfsdfss
 
 
-sdf
-sd
-fsd
-f
-sd
-fs
-df
-sd
-f
-sd
-f
-sd
-fs
-d
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao
+- nihao 
 
--sdf
-sdfsd-
--ds
- - sd
- - -ds
- - -sd
- - d
-
- - sd
- - - sd
- - - 
-
-- sd
- - - sd
- - - 
-
-
-- sd
- - - sd
- - - 
-
-
-
-- sd
- - - sd
- - - 
-
-
-- sd
- - - sd
- - - 
-
-
-- sd
- - - sd
- - - 
-
-
-
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- 
- -sdf
-  -
 
 #what-is-latex 
