--- a/_posts/2019-02-21-format使用.md
+++ b/_posts/2019-02-21-format使用.md
@@ -3,56 +3,41 @@ layout: page
 title: format使用方式
 ---
 
-##目录
-- 1.基本形式
-- 2.值转化
-- 3.字符串填充和对齐
-- 4.字符串截取
-- 5.混合截取与填充
-- 6.数值
-- 7.数值填充
-- 8.符号数值
-- 9.命名占位符
-- 10.嵌套数据结构
-- 11.日期
-- 12 参数形式
-- 12.自定义对象
 
 
-[What is LaTeX?](#what-is-latex)
+<br />
 
-sdfsdfss
+> 
+&emsp; &emsp;很多年以来，python拥有非常强大的字符串表现形式，但是文档太理论且太专业，所以这里举一些例子来熟悉字符串API
+<br />
+
+<br />
+>
+###目录
+- 1.[基本形式?](##基本形式)
+- 2.[值转化?](##值转化)
+- 3.[字符串填充和对齐?]()
+- 4.[字符串截取?]()
+- 5.[混合截取与填充?]()
+- 6.[数值?]()
+- 7.[数值填充?]()
+- 8.[符号数值?]()
+- 9.[命名占位符?]()
+- 10.[嵌套数据结构?]()
+- 11.[日期?]()
+- 12 [参数形式?]()
+- 12.[自定义对象?]()
+
+<br />
+##基本形式
+> &emsp; &emsp;简单的位置形式也许是最通用的使用方式。如果这些参数的顺序不太可能并且只有很少参数要进行连接的话那就使用这种方式。
+> &emsp; &emsp;由于这些参数不是用来代表事物的名称的描述，因此这种格式化方式只应用于相对较少的元素
+
+<br/>
+
+```python
+old  '%s %s' % ('one', 'two')
+new  '{} {}'.format('one', 'two')
+```
 
 
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao
-- nihao 
-
-
-#what-is-latex 
