--- a/_posts/2019-02-21-format使用.md
+++ b/_posts/2019-02-21-format使用.md
@@ -13,7 +13,7 @@ title: format使用方式
 
 <br />
 >
-###目录
+### 目录
 - 1.[基本形式?](##基本形式)
 - 2.[值转化?](##值转化)
 - 3.[字符串填充和对齐?]()
@@ -29,7 +29,9 @@ title: format使用方式
 - 12.[自定义对象?]()
 
 <br />
-##基本形式
+### 基本形式
+<br />
+
 > &emsp; &emsp;简单的位置形式也许是最通用的使用方式。如果这些参数的顺序不太可能并且只有很少参数要进行连接的话那就使用这种方式。
 > &emsp; &emsp;由于这些参数不是用来代表事物的名称的描述，因此这种格式化方式只应用于相对较少的元素
 
